--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
     <div class="header">
         <h5>Steve Jobs</h5>
         <p>1955 - 2011</p>
-        <a href="https://www.youtube.com/watch?v=s4pVFLUlx8g"><img src="/image/play_circle_white_24dp.svg" alt="Click the icon for steve biography"></a>
+        <div class="image">
+            <a href="https://www.youtube.com/watch?v=s4pVFLUlx8g"><img src="/image/play_circle_white_24dp.svg" alt="Click the icon for steve biography"></a>
+        </div>
     </div>
-    <div class="pic">
-        <img src="/image/steve.jfif" alt="">
-    </div>
+
     <div class="words">
         <p>Design is not just what it <br> looks like and feel like. <br> Design is how it works.</p>
+        <div class="pic">
+            <img src="/image/steve.jfif" alt="">
+        </div>
     </div>
     <div class="bio">
         <h4>Biography</h4>
